[package]
name = "oss-explorer"
version = "0.1.0"
edition = "2021"
description = "A web tool to explore and categorize open source software by language, creation date, and issues"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oss-explorer"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlInputElement", "HtmlSelectElement", "HtmlImageElement", "EventTarget"] }
gloo-timers = { version = "0.3", features = ["futures"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = "z"
